--- a/03-ig-news/package.json
+++ b/03-ig-news/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prismicio/client": "^6.4.2",
+    "@prismicio/react": "^2.2.0",
     "@stripe/stripe-js": "^1.26.0",
     "axios": "^0.26.1",
     "faunadb": "^4.5.2",
     "next": "12.1.0",
     "next-auth": "^4.3.1",
+    "prismic-dom": "^2.2.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
@@ -22,6 +25,7 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.21",
+    "@types/prismic-dom": "^2.1.1",
     "@types/react": "^17.0.41",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
