--- a/04-dashgo/package.json
+++ b/04-dashgo/package.json
@@ -23,9 +23,11 @@
     "react-dom": "18.0.0",
     "react-hook-form": "^7.30.0",
     "react-icons": "^4.3.1",
+    "react-query": "^3.38.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@faker-js/faker": "^6.3.1",
     "@types/node": "^17.0.23",
     "@types/react": "^18.0.3",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
@@ -42,6 +44,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.4.0",
+    "miragejs": "^0.1.43",
     "prettier": "^2.6.2",
     "typescript": "^4.6.0"
   }
